# libgitpp

./: .travis.yml  CMakeLists.txt  README.md  build.sh
git/: blob.hh  commit.hh  exceptions.hh  oid.hh  reference.hh  repository.hh  tree.hh
include/git/: blob.hh  commit.hh  exceptions.hh  oid.hh  reference.hh  repository.hh  tree.hh
tests/: CMakeLists.txt  clone.cc  fetch.cc  foreach_refs.cc  tree_walk.cc
