CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

PROJECT(hugtak)

INCLUDE(CheckIncludeFiles)

FIND_PACKAGE(Libgit2 REQUIRED)

MACRO(use_cxx14)
  IF(CMAKE_VERSION VERSION_LESS "3.1")
    SET(CMAKE_CXX_FLAGS "-std=c++14 ${CMAKE_CXX_FLAGS}")
  ELSE()
    SET(CMAKE_CXX_STANDARD 14)
    SET(CMAKE_CXX_STANDARD_REQUIRED ON)
  ENDIF()
ENDMACRO(use_cxx14)

use_cxx14()

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall -Wextra -Wno-multichar -pedantic")
SET(CMAKE_CXX_FLAGS_DEBUG " -O0 -ggdb -fprofile-arcs -ftest-coverage")
SET(CMAKE_BUILD_TYPE Debug)

INCLUDE_DIRECTORIES(
  ${PROJECT_SOURCE_DIR}/include
)

# Test app
INCLUDE(CTest)
ADD_SUBDIRECTORY(tests)

INSTALL(DIRECTORY include/ DESTINATION include)
